--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",  // Ganti dengan nama file entry point Anda
-      "use": "@vercel/node"  // Gunakan builder untuk aplikasi Node.js
+      "src": "index.js", 
+      "use": "@vercel/node"  
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.js"  // Semua rute akan diarahkan ke index.js
+      "dest": "/index.js" 
     }
   ]
 }
